Changed seminars location

--- a/snail.html
+++ b/snail.html
@@ -87,8 +87,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class="seminarbox">
 					<div class="snailbox">
-						<h2>Auditório do CCSL - IME-USP</h2>
-						<h2>14:00</h2>
+						<h2>Auditório Antônio Gilioli - IME-USP</h2>
+						<h2>15:00</h2>
 						<h3>Válido como AAC</h3>
 					</div>
 				</div>
